@@ -42,12 +42,12 @@ body  {
 	background: #333;
 	font-weight: none;
 	font-size: 8pt;
-	  color: #fff;	
-	  padding: 5px;
-	  margin: 0;
-	  width: 195px;
-	  padding-right: 0;
-	  border-bottom: 4px solid #999;
+	color: #fff;	
+	padding: 5px;
+	margin: 0;
+	width: 195px;
+	padding-right: 0;
+	border-bottom: 4px solid #999;
 }
 
 a {
@@ -63,6 +63,12 @@ a:hover {
 	margin: 0 15px 0 160pt; 
 	font-size: 8pt;	
 } 
+
+#mainContent h3 {
+	color: #339933;
+	font-size: 16px;
+	font-family: Arial;
+}
 
 #result
 {
