@@ -15,6 +15,7 @@ Build <<REVISION>> (Version 1.1.<<REVISION>>)
   * Revamped admin panel
   * Backend optimizations
   * Duplicate schedules on import now overwrite previous existing schedule
+  * Pilot notified of registraion status
   * Update check fixed
   * Javascript trimmed down
   * Maintenance section to calculate distances for routes/pireps
